# sso-rs

./: .dockerignore  .drone.yml  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  api.md
.claude/: settings.local.json
.github/workflows/: build.yaml  deploy.yaml  docker-image-ci.yaml
entity/: Cargo.toml
entity/src/: application.rs  application_access_grant.rs  application_secret.rs  authorization_code.rs  image.rs  lib.rs  prelude.rs  rsa.rs  token.rs  user.rs
idl/: user.proto
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220417_000001_add_image.rs  m20220807_132032_create_applications.rs  m20250831_000001_add_oidc_tables.rs  m20251109_073614_add_pkce_to_authorization_code.rs  main.rs
migrations/2021-04-04-062944_create_users/: up.sql
qcloud/: Cargo.toml
qcloud/src/: error.rs  http_client.rs  lib.rs  secrets.rs  signature.rs  sts.rs
qcloud/src/cos/: mod.rs  object.rs  signature.rs  util.rs
src/: constants.rs  custom_macro.rs  error.rs  main.rs  response.rs  util.rs
src/db/: connection.rs
src/extractor/: mod.rs  user_id_from_session.rs
src/model/: application.rs  application_secret.rs  image.rs  mod.rs  user.rs
src/route/: mod.rs
src/route/api/: mod.rs
src/route/api/application/: get_list.rs  mod.rs  post.rs  single.rs
src/route/api/application/secret/: create.rs  get_list.rs
src/route/api/auth/: login.rs  logout.rs  register.rs
src/route/api/crypto/: rsa.rs
src/route/api/image/: mod.rs  patch.rs  post.rs  token.rs
src/route/api/oidc/: authorize.rs  mod.rs  token.rs  userinfo.rs  well_known.rs
src/route/api/user/: mod.rs  patch.rs  user.rs
src/rpc/: user.rs
src/storage/: mod.rs  mysql.rs  s3.rs  session.rs
volo-gen/: volo.yml
volo-gen/src/: lib.rs
