[package]
name = "sso-rs"
version = "0.1.0"
authors = ["delbertbeta <delbertbeta@live.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration", "qcloud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
derive_more = "0.99.0"
uuid = { version = "0.8", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
sea-orm = { version = "^0.6", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ], default-features = false }
entity = { path = "entity" }
migration = { path = "migration" }
qcloud = { path = "qcloud" }
tower-http = { version = "0.2.0", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive", "unic"] }
pbkdf2 = "0.11.0"
rand_core = { version = "0.6.3", features = ["std"] }
chrono = "0.4.19"
anyhow = "1.0.56"
async-session = "3.0.0"
async-redis-session = "0.2.2"
openssl = "0.10.38"
base64 = "0.13.0"
http = "0.2.6"
cookie = "0.16.0"
url = "2.2.2"
lazy_static = "1.4.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[features]
