[package]
name = "sso-rs"
version = "0.1.0"
authors = ["delbertbeta <delbertbeta@live.com>"]
edition.workspace = true

[workspace]
members = [".", "entity", "migration", "volo-gen"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

axum = { version = "0.7.5" }
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
derive_more = "0.99.17"
uuid = { version = "1.2.1", features = ["v4"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
sea-orm = { version = "^0", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
], default-features = false }
entity = { path = "entity" }
migration = { path = "migration" }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
serde = { version = "1.0.198", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive", "unic"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
chrono = { version = "0.4.22", features = ["serde"] }
anyhow = { version = "1.0.65", workspace = true }
async-session = "3.0.0"
async-redis-session = "0.2.2"
openssl = "0.10.42"
base64 = "0.22.0"
http = "1.1.0"
cookie = "0.18.1"
url = "2.3.1"
lazy_static = "1.4.0"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
tldextract = "0.6.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.73.0"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
jsonwebtoken = "9.3.1"
serde_json = "1.0.143"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[features]


[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"
anyhow = "1"
futures = "0.3"
tokio = "1"
