[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "^0", default-features = false, features = [ "sqlx-mysql", "runtime-tokio-native-tls" ] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
