[package]
name = "qcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.38"
urlencoding = "2.1.0"
chrono = "0.4.19"
hmac-sha1 = "0.1.3"
hyper = { version = "0.14.18", features = ["full"] }
url = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
itertools = "0.10.3"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4.0"
hyper-tls = "0.5.0"
base64 = "0.13.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
dotenv = "0.15.0"
