[package]
name = "qcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.38"
urlencoding = "2.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
hmac-sha1 = "0.2.2"
hyper = { version = "1.3.1", features = ["full"] }
url = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
itertools = "0.12.1"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4.0"
hyper-tls = "0.6.0"
hyper-util = "0.1.3"
http-body-util = "0.1"
base64 = "0.22.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
dotenv = "0.15.0"
hex = "0.4.3"
rand_core = { version = "0.6.3", features = ["std"] }

[features]
